classDiagram
direction LR
class TipoTurno {
    <<enum>>
    CONSULTA_GENERAL
    VACUNACION
    CIRUGIA
    BANIO
    ANALISIS
    -String descripcion
    -int duracionMinutos
    +String getDescripcion()
    +int getDuracionMinutos()
}
class TipoAlimentacion {
    <<enum>>
    OMNIVORO
    CARNIVORO_ESTRICTO
    HERVIBORO
    -String descripcion
    +String getDescripcion()
}
class Direccion {
    -String calle
    -int numero
    -String localidad
    +void actualizarDireccion()
    +String getDireccionCompleta()
}

class Persona {
    <<abstract>>
    -String DNI
    -String nombre
    -String apellido
    -Direccion direccion
    +String getDNI()
    +String getNombre()
    +String getApellido()
    +String getDireccionCompleta()
}
class Veterinario {
    -String matricula
    -List turnos
    -String especialidad
    -String turnoTrabajo
    +String getMatricula()
    +String getImagen()
    +void agregarTurno(Turno turno)
}
class Responsable {
    -List mascotas
    +void agregarMascota(Animal animal)
    +void removerMascota(Animal animal)
    +List getMascotas()
}
class Animal {
    <<abstract>>
    -String idAnimal
    -String nombre
    -LocalDate fechaNacimiento
    -boolean sexo
    -Responsable responsable
    -HistoriaClinica historiaClinica
    -boolean enAdopcion
    +int calcularEdad()
    +String getImagen()
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class Perro {
    -String raza
    -boolean necesitaPaseo
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class Gato {
    -String raza
    -boolean esEsterilizado
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class Conejo {
    -String raza
    -boolean esEsterilizado
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class Loro {
    -String raza
    -boolean necesitaPaseo
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class Tortuga {
    -String raza
    -boolean necesitaPaseo
    +TipoAlimentacion getTipoAlimentacion()
    +String getEspecie()
}
class HistoriaClinica {
    -List medicamentosRecetados
    -List registroVacunas
    +void recetarMedicamento(Medicamento medicamento)
    +void recetarMedicamento(Prescripcion pres)
    +void registrarVacuna(RegistroVacunacion reg)
    +List getMedicamentosRecetados()
    +List getRegistroVacunas()
}
class Medicamento {
    -String codigoSenasa
    -String nombreMedicamento
    -String subtitulo
    +String getCodigoSenasa()
    +String getNombreMedicamento()
    +String getSubtitulo()
    +void setSubtitulo(String subtitulo)
}
class Prescripcion {
    -Medicamento medicamento
    -String dosis
    -String viaAdministracion
    -String frecuencia
    -LocalDate fechaInicio
    -int vigenciaDias
    -String indicaciones
    -boolean esMagistral
    +Medicamento getMedicamento()
    +String getDosis()
    +String getViaAdministracion()
    +String getFrecuencia()
    +LocalDate getFechaInicio()
    +int getVigenciaDias()
    +String getIndicaciones()
    +boolean isEsMagistral()
    +String getNombreMedicamento()
    +String getCodigoSenasa()
}
class Vacuna {
    -int vigenciaDias
    +int getVigenciaDias()
}
class RegistroVacunacion {
    -Vacuna vacunaAplicada
    -LocalDate fechaAplicacion
    -LocalDate fechaVencimiento
    -String tipoDosis
    -String via
    -String lote
    -String observaciones
    +Vacuna getVacunaAplicada()
    +LocalDate getFechaAplicacion()
    +LocalDate getFechaVencimiento()
    +boolean estaVencida()
    +String getTipoDosis()
    +String getVia()
    +String getLote()
    +String getObservaciones()
}
class Turno {
    -int idTurno
    -String fecha
    -String hora
    -Veterinario veterinario
    -Animal animal
    -String estado
    -TipoTurno tipo
    -String observaciones
    +String ESTADO_PENDIENTE$
    +String ESTADO_COMPLETADO$
    +String ESTADO_CANCELADO$
    +void completarTurno()
    +void cancelarTurno()
    +boolean esPendiente()
}
class Veterinaria {
    -String nombreNegocio
    -List listaVeterinarios
    -List listaClientes
    -List listaTurnos
    -List catalogoMedicamentos
    +void registrarVeterinario(Veterinario v)
    +void registrarCliente(Responsable r)
    +void registrarTurno(Turno t)
    +Veterinario buscarVeterinarioPorMatricula(String m)
    +Veterinario buscarVeterinarioPorDni(String dni)
    +Responsable buscarClientePorDni(String dni)
    +List buscarMascotasPorNombre(String n)
    +List obtenerTurnosPorFecha(String f)
    +List obtenerTurnosDeVeterinario(Veterinario v)
    +List obtenerTurnosPendientes()
}
class ComprobanteTurno {
    -String tipoDocumento
    -Turno turno
    -LocalDateTime fechaEmision
    -String nombreVeterinaria
    +String generarEncabezado()
    +String generarDetallePaciente()
    +String generarDetalleAtencion()
    +String generarDetalleTratamiento()
    +String generarTextoCompleto()
    +void marcarComoCompletado()
}
Persona <|-- Responsable
Persona <|-- Veterinario
Animal <|-- Perro
Animal <|-- Gato
Animal <|-- Conejo
Animal <|-- Loro
Animal <|-- Tortuga
Medicamento <|-- Vacuna
Animal "1" *-- "1" HistoriaClinica
Veterinaria "1" *-- "*" Veterinario
Veterinaria "1" *-- "*" Responsable
Veterinaria "1" *-- "*" Turno
Responsable "1" o-- "*" Animal
Veterinaria "1" o-- "*" Medicamento
HistoriaClinica "1" *-- "*" Prescripcion
Prescripcion "*" --> "1" Medicamento
HistoriaClinica "1" *-- "*" RegistroVacunacion
RegistroVacunacion "*" --> "1" Vacuna
Persona "1" --> "0..1" Direccion
Turno "*" --> "1" Veterinario
Turno "*" --> "1" Animal
Turno "*" --> "1" TipoTurno
Animal ..> TipoAlimentacion
ComprobanteTurno ..> Turno
ComprobanteTurno ..> Animal
ComprobanteTurno ..> Veterinario
ComprobanteTurno ..> Responsable
ComprobanteTurno ..> HistoriaClinica
ComprobanteTurno ..> RegistroVacunacion
